<resources>
    <string name="app_name">得胜会议系统</string>
    <string name="enter_meeting">进入会议</string>
    <string name="error_0">平台初始化成功</string>
    <string name="error_1">过期了</string>
    <string name="error_2">程序出错</string>
    <string name="error_3">不允许接入的企业</string>
    <string name="error_4">没有多余的设备ID了</string>
    <string name="error_5">不允许接入的设备</string>
    <string name="error_6">文件数据错误</string>
    <string name="error_7">非法的设备</string>
    <string name="error_8">设备ID已经被使用了</string>
    <string name="error_9">不存在的需要的资源</string>
    <string name="error_10">文件数据错误,但可以解析出原设备ID</string>
    <string name="error_11">指定设备与设备类型不匹配</string>
    <string name="member_name_">参会人：</string>
    <string name="seat_name_">席位名称：</string>
    <string name="member_position_">参会人职位：</string>
    <string name="member_unit_">参会人单位：</string>
    <string name="file_downloading">文件下载中</string>
    <string name="file_downloaded_percent">%1$s已下载%2$s</string>
    <string name="sign_in_successfully">签到成功，进入会议</string>
    <string name="sign_in_password_error">签到密码错误</string>
    <string name="click_again_exit">再次点击退出应用</string>
    <string name="takstar">广州得胜电子有限公司</string>
    <string name="please_join_the_meeting_first">请先加入会议</string>
    <string name="please_bind_the_member_first">请先绑定参会人</string>
    <string name="enter_password">输入密码</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="meeting_sign_in">会议签到</string>
    <string name="undo">撤销</string>
    <string name="clean">清除</string>
    <string name="handwritten_sign_in">手写签到</string>
    <string name="password_sign_in">密码签到</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_signing_first">请先进行签名</string>
    <string name="please_enter_password_first">请先输入密码</string>
    <string name="bind_member">绑定参会人</string>
    <string name="create">新建</string>
    <string name="please_choose_member">请选择参会人</string>
    <string name="create_member">创建参会人</string>
    <string name="company">公司</string>
    <string name="required_field">必填项</string>
    <string name="phone">电话</string>
    <string name="position">职位</string>
    <string name="name">名称</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="please_enter_name">请输入名称</string>
    <string name="note">备注</string>
    <string name="email_format_error">邮箱格式错误</string>
    <string name="phone_format_error">电话号码格式错误</string>
    <string name="offline">离线</string>
    <string name="online">在线</string>
    <string name="role_member_">参会人：</string>
    <string name="role_hosts_">主持人：</string>
    <string name="role_secretary_">秘书：</string>
    <string name="role_manager_">管理员：</string>
    <string name="function_meeting_agenda">会议议程</string>
    <string name="function_meeting_material">会议资料</string>
    <string name="function_meeting_annotation">批注查看</string>
    <string name="function_meeting_chat">互动交流</string>
    <string name="function_meeting_live_video">视频直播</string>
    <string name="function_meeting_art_board">电子白板</string>
    <string name="function_meeting_web_browsing">网页浏览</string>
    <string name="function_meeting_sign_in">签到信息</string>
    <string name="function_rate_view">评分查看</string>
    <string name="function_bulletin_view">公告查看</string>
    <string name="function_vote_view">投票查看</string>
    <string name="function_election_view">选举查看</string>
    <string name="other_feature">其它功能</string>
    <string name="meeting_agenda">会议议程</string>
    <string name="meeting_materials">会议资料</string>
    <string name="meeting_chat">互动交流</string>
    <string name="meeting_video">视频直播</string>
    <string name="meeting_draw">电子白板</string>
    <string name="meeting_web">网页浏览</string>
    <string name="meeting_signin">签到信息</string>
    <string name="meeting_score">会议评分</string>
    <string name="meeting_annotate">批注查看</string>
    <string name="exit_main_tip">是否确定退出会议界面？</string>
    <string name="init_x5_failure">组件已下载完成，需要进行重启应用才能正常使用。（之后无须再次下载）</string>
    <string name="not_supported">不支持打开该格式的文件</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="document">文档资料</string>
    <string name="picture_file">图片文件</string>
    <string name="video_file">视频文件</string>
    <string name="other_file">其它文件</string>
    <string name="push_file">推送文件</string>
    <string name="open">打开</string>
    <string name="no_wps_software_found">请先安装WPS软件</string>
    <string name="you_have_no_permission">你没有权限</string>
    <string name="please_enter_file_name">请输入文件名</string>
    <string name="upload_completed">%1$s上传完毕</string>
    <string name="export">导出</string>
    <string name="modify_file_name">修改文件名</string>
    <string name="file_download">文件下载</string>
    <string name="number">序号</string>
    <string name="file_name">文件名</string>
    <string name="id">ID</string>
    <string name="no_file_to_download">没有文件可下载</string>
    <string name="file_already_exists">文件已经存在</string>
    <string name="_file_already_exists">%1$s文件已经存在</string>
    <string name="agreed_postilview">%1$s同意了查看批注文件的权限，可随时查看</string>
    <string name="reject_postilview">%1$s拒绝了查看批注文件的权限</string>
    <string name="not_checked_in">未签到</string>
    <string name="checked_in">已签到</string>
    <string name="yqd_">已签到人数：%1$s人</string>
    <string name="yd_">签到信息（应到人数：%1$s人）</string>
    <string name="wqd_">未签到人数：%1$s人</string>
    <string name="play_list">播放列表</string>
    <string name="video">视频</string>
    <string name="screen_video">同屏视频</string>
    <string name="project_video">投影视频</string>
    <string name="send">发送</string>
    <string name="time">%1$s【 %2$s 】</string>
    <string name="me_time">我</string>
    <string name="please_enter_content">请输入内容</string>
    <string name="select_all">全选</string>
    <string name="tip_save_as">保存位置：%1$s</string>
    <string name="save_local">保存本地</string>
    <string name="save_server">服务器</string>
    <string name="exit_white_board">退出白板</string>
    <string name="please_choose_picture_file">请选择图片文件</string>
    <string name="title_whether_agree_join">是否同意加入%1$s发起的白板批注？</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="tip_join_the_sharing">加入了共享</string>
    <string name="tip_repulse_join">拒绝加入</string>
    <string name="tip_exit_the_shared">退出了共享</string>
    <string name="you_have_exit_annotation">你已成功退出多人批注</string>
    <string name="rise">上升</string>
    <string name="fall">下降</string>
    <string name="stop">停止</string>
    <string name="restart_app">软件重启</string>
    <string name="restart_client">终端重启</string>
    <string name="shutdown_client">终端关机</string>
    <string name="assisted_sign_in">辅助签到</string>
    <string name="set_role">角色设定</string>
    <string name="web_wake_up">网络唤醒</string>
    <string name="device_type">设备类型</string>
    <string name="device_id">设备ID</string>
    <string name="device_status">设备状态</string>
    <string name="member">参会人</string>
    <string name="interface_status">界面状态</string>
    <string name="database_dev">会议数据库</string>
    <string name="tea_dev">会议茶水设备</string>
    <string name="pro_dev">会议投影设备</string>
    <string name="capture_dev">会议流采集设备</string>
    <string name="client_dev">会议终端设备</string>
    <string name="video_chat_dev">视频对讲客户端</string>
    <string name="release_dev">会议发布设备</string>
    <string name="screen_dev">一键同屏设备</string>
    <string name="face_main">主界面</string>
    <string name="face_meet">会议界面</string>
    <string name="face_back">后台界面</string>
    <string name="face_vote">投票界面</string>
    <string name="please_choose_device">请选择设备</string>
    <string name="member_name">参会人名称</string>
    <string name="seat">席位</string>
    <string name="role">角色</string>
    <string name="member_role_ordinary">普通参会人</string>
    <string name="member_role_host">主持人</string>
    <string name="member_role_secretary">秘书</string>
    <string name="member_role_admin">管理员</string>
    <string name="none">无</string>
    <string name="please_choose_binded_member">请选择已绑定席位的参会人</string>
    <string name="bulletin">公告管理</string>
    <string name="terminal_control">终端控制</string>
    <string name="vote_manage">投票管理</string>
    <string name="election_manage">选举管理</string>
    <string name="video_control">视频控制</string>
    <string name="screen_manage">屏幕管理</string>
    <string name="launch">发起</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="add">添加</string>
    <string name="view_details">查看详情</string>
    <string name="view_chart">查看图表</string>
    <string name="export_data">数据导出</string>
    <string name="import_data">数据导入</string>
    <string name="vote_type_4_5">5选4</string>
    <string name="vote_type_3_5">5选3</string>
    <string name="vote_type_2_5">5选2</string>
    <string name="vote_type_2_3">3选2</string>
    <string name="vote_type_single">单选</string>
    <string name="vote_type_multi">多选</string>
    <string name="anonymous">匿名</string>
    <string name="notation">记名</string>
    <string name="vote_state_not_initiated">未发起</string>
    <string name="vote_state_ongoing">已发起</string>
    <string name="vote_state_has_ended">已完成</string>
    <string name="please_choose_vote">请选择投票</string>
    <string name="vote_content">投票内容</string>
    <string name="vote_time">投票时间</string>
    <string name="ten_minutes">10分钟</string>
    <string name="thirty_minutes">30分钟</string>
    <string name="launch_vote">发起投票</string>
    <string name="anonymity">匿名</string>
    <string name="permission">权限</string>
    <string name="device_state">设备状态</string>
    <string name="vote_tip">参会人离线、未绑定会议或未进入会议，将无法选中参与投票</string>
    <string name="choose_vote_member">选择投票人员</string>
    <string name="not_bind_dev">未绑定席位</string>
    <string name="not_on_meet">未进入会议</string>
    <string name="no_permission">无权限</string>
    <string name="attendees_are_unable_to_vote">参会人无法参与投票</string>
    <string name="tip_vote_status_changed">当前投票状态已改变，请重新发起投票</string>
    <string name="launch_successful">发起成功</string>
    <string name="start_vote_tip">请选择未发起的投票</string>
    <string name="start_election_tip">请选择未发起的选举</string>
    <string name="stop_vote_tip">请选择已发起的投票</string>
    <string name="stop_election_tip">请选择已发起的选举</string>
    <string name="view_vote_tip">请选择已发起或已完成的投票</string>
    <string name="view_election_tip">请选择已发起或已完成的选举</string>
    <string name="please_choose_snotation_vote">请选择记名投票</string>
    <string name="please_choose_snotation_election">请选择记名选举</string>
    <string name="export_result">导出结果</string>
    <string name="vote_memebr">投票人</string>
    <string name="current_vote_no_data">当前投票无数据</string>
    <string name="screen_source">屏幕源</string>
    <string name="previews">预览</string>
    <string name="target_screen">目标屏幕</string>
    <string name="projection">投影机</string>
    <string name="mandatory">强制</string>
    <string name="launch_screen">发起同屏</string>
    <string name="stop_screen">结束同屏</string>
    <string name="please_choose_target">请选择要同屏的目标</string>
    <string name="please_choose_screen_source">请选择屏幕源</string>
    <string name="play_pause">暂停/播放</string>
    <string name="screen_shot">截图</string>
    <string name="check_all">全选</string>
    <string name="check_all_member">参会人全选</string>
    <string name="operation_tips">操作询问提示</string>
    <string name="submit_tip">确定要提交吗？</string>
    <string name="score_desc">评分描述</string>
    <string name="score_file">文件</string>
    <string name="score_status">状态</string>
    <string name="score_yd">应到/实评</string>
    <string name="score_registered">记名</string>
    <string name="score_a">评分1</string>
    <string name="score_b">评分2</string>
    <string name="score_c">评分3</string>
    <string name="score_d">评分4</string>
    <string name="score_total">总分</string>
    <string name="score_average">总平均分</string>
    <string name="average_score">平均分</string>
    <string name="total_score">总分</string>
</resources>