<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginBottom="30dp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_launch"
            style="@style/button_blue_rect_style"
            android:layout_width="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/launch" />

        <Button
            android:id="@+id/btn_stop"
            style="@style/button_blue_rect_style"
            android:layout_width="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/stop" />

        <Button
            android:id="@+id/btn_create"
            style="@style/button_blue_rect_style"
            android:layout_width="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/create" />

        <Button
            android:id="@+id/btn_modify"
            style="@style/button_blue_rect_style"
            android:layout_width="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/modify" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/button_blue_rect_style"
            android:layout_width="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btn_view_details"
            style="@style/button_blue_rect_style"
            android:layout_width="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/view_details" />

        <Button
            android:id="@+id/btn_view_chart"
            style="@style/button_blue_rect_style"
            android:layout_width="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/view_chart" />

        <Button
            android:id="@+id/btn_export_data"
            style="@style/button_blue_rect_style"
            android:layout_width="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/export_data" />

        <Button
            android:id="@+id/btn_import_data"
            style="@style/button_blue_rect_style"
            android:layout_width="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:text="@string/import_data" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_vote"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="@color/white" />

</LinearLayout>