<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:background="@color/gray"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_view_1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="1px"
        android:layout_marginEnd="1px"
        android:layout_marginBottom="1px"
        android:layout_weight="2"
        android:background="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_desc"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1px"
        android:layout_marginBottom="1px"
        android:layout_weight="2"
        android:background="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_file"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1px"
        android:layout_marginBottom="1px"
        android:layout_weight="1"
        android:background="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_status"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1px"
        android:layout_marginBottom="1px"
        android:layout_weight="1.5"
        android:background="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_yd"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1px"
        android:layout_marginBottom="1px"
        android:layout_weight="1"
        android:background="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_registered"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_6"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1px"
        android:layout_marginBottom="1px"
        android:layout_weight="1.5"
        android:background="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_a"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_7"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1px"
        android:layout_marginBottom="1px"
        android:layout_weight="1.5"
        android:background="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_b"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_8"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1px"
        android:layout_marginBottom="1px"
        android:layout_weight="1.5"
        android:background="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_c"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_9"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1px"
        android:layout_marginBottom="1px"
        android:layout_weight="1.5"
        android:background="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_d"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_10"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1px"
        android:layout_marginBottom="1px"
        android:layout_weight="1"
        android:background="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_total"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_11"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="1px"
        android:layout_marginBottom="1px"
        android:layout_weight="1"
        android:background="@color/white"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_average"
        android:textSize="@dimen/text_size_small" />
</LinearLayout>