<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="30dp"
    android:layout_marginBottom="30dp"
    android:orientation="horizontal">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_dir"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@drawable/dialog_full_holo_light"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_upload"
                style="@style/btn_style"
                android:layout_marginEnd="1dp"
                android:layout_marginStart="2dp"
                android:layout_width="wrap_content"
                android:drawableStart="@drawable/ic_upload"
                android:paddingStart="10dp"
                android:text="@string/upload" />

            <Button
                android:id="@+id/btn_export"
                style="@style/btn_style"
                android:layout_marginEnd="1dp"
                android:layout_width="wrap_content"
                android:drawableStart="@drawable/ic_download"
                android:paddingStart="10dp"
                android:text="@string/export" />

            <Button
                android:id="@+id/btn_document"
                style="@style/btn_style"
                android:layout_width="wrap_content"
                android:layout_marginEnd="1dp"
                android:text="@string/document" />

            <Button
                android:id="@+id/btn_picture"
                style="@style/btn_style"
                android:layout_width="wrap_content"
                android:layout_marginEnd="1dp"
                android:text="@string/picture_file" />

            <Button
                android:id="@+id/btn_video"
                style="@style/btn_style"
                android:layout_width="wrap_content"
                android:layout_marginEnd="1dp"
                android:text="@string/video_file" />

            <Button
                android:id="@+id/btn_other"
                style="@style/btn_style"
                android:layout_width="wrap_content"
                android:layout_marginEnd="1dp"
                android:text="@string/other_file" />

            <Button
                android:id="@+id/btn_push"
                style="@style/btn_style"
                android:layout_width="wrap_content"
                android:text="@string/push_file" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/devline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_file"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>