<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_root_view"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_view_height"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_view_1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/member"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/item_view_2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_a"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/item_view_3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_b"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_normal" />


    <TextView
        android:id="@+id/item_view_4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_c"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/item_view_5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/score_d"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/item_view_6"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/total_score"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/item_view_7"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ellipsize="end"
        android:gravity="center"
        android:lines="1"
        android:singleLine="true"
        android:text="@string/average_score"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_normal" />
</LinearLayout>