<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_full_holo_light"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/please_choose_member"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/cb_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="5dp"
        android:text="@string/select_all" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_member"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:layout_marginEnd="1dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_definite"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/ensure" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>